add test id filter to getTestRuns api
